--- a/css/custom.css
+++ b/css/custom.css
@@ -125,3 +125,34 @@ padding-top: 20px;
     display: none;
   }
 }
+.vid1{
+  margin: 100px auto 5% 10%;
+}
+.imagess{
+  margin: 5% auto;
+}
+.collapsible {
+  background-color: #777;
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+.active, .collapsible:hover {
+  background-color: #555;
+}
+
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
+}
+.b{
+  margin-bottom: 20px;
+}
